GNOME Bugzilla – Bug 639555
[audioparsers] Be careful to not lose the event ref
Last modified: 2011-01-15 16:51:43 UTC
When handling an event, only unref if it has been handled.
Created attachment 178345 [details] [review] audioparsers: baseparse: Be careful to not lose the event ref Only unref the event if it has been handled.
Comment on attachment 178345 [details] [review] audioparsers: baseparse: Be careful to not lose the event ref > audioparsers: baseparse: Be careful to not lose the event ref > > Only unref the event if it has been handled. I think something like this would be clearer: "Don't unref event if it hasn't been handled, because the caller will assume it's still valid and can be re-used in that case. Fixes issue with xyz", or somesuch. (The comment above the function should probably also mention the unusual calling semantics.)
Created attachment 178395 [details] [review] audioparsers: baseparse: Be careful to not lose the event ref Updated patch
Comment on attachment 178395 [details] [review] audioparsers: baseparse: Be careful to not lose the event ref Pushed with the required modifications
Fix pushed as a6a982e8be06a861e23b377d8df4e3be8538ca53